--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <h6 class="text-center">Facebook</h6>
                   </div>
                   <div class="col-xs-1 col-sm-1">
-                    <h6 class="text-center">Instagram</h6>
+                    <h6 class="text-">Instagram</h6>
                   </div>
                 </div>
               </div>
